fixed broken stylesheet

--- a/components/style.css
+++ b/components/style.css
@@ -1,4 +1,4 @@
-/* cSpell:words prolog -->
+/* cSpell:words prolog */
 
 :root {
     --column-width: 40em;
@@ -42,6 +42,12 @@ p.tag-line span {
 
 .front-page h1 {
     margin-top: 1em;
+}
+
+.todo {
+    font-weight: bold;
+    color: #f00;
+    background-color: #fff;
 }
 
 p + h2 {
